# cc-switch-cli

./: .gitignore  Cargo.toml  README.md  TECHNICAL_ANALYSIS.md  install.sh  update.sh
.github/workflows/: release.yml
ccswitch-cli/: Cargo.toml
ccswitch-cli/src/: cli.rs  interactive.rs  main.rs  output.rs  tui.rs
ccswitch-cli/src/commands/: batch.rs  config.rs  env.rs  failover.rs  list.rs  mcp.rs  mod.rs  openclaw.rs  prompt.rs  provider.rs  proxy.rs  skill.rs  speedtest.rs  status.rs  update.rs  usage.rs  webdav.rs
ccswitch-cli/src/web/: api.rs  auth.rs  frontend.rs  index.html  mod.rs
ccswitch-core/: Cargo.toml
ccswitch-core/src/: app_config.rs  config.rs  error.rs  lib.rs  mcp.rs  openclaw_config.rs  prompt.rs  provider.rs  settings.rs  skill.rs  store.rs
ccswitch-core/src/database/: failover.rs  mcp.rs  migration.rs  mod.rs  prompt.rs  provider_endpoints.rs  schema.rs  skill.rs  stream_check_db.rs  usage_rollup.rs
ccswitch-core/src/services/: config.rs  env_checker.rs  failover.rs  global_proxy.rs  mcp.rs  mod.rs  prompt.rs  provider.rs  skill.rs  speedtest.rs  stream_check.rs  usage_stats.rs  webdav_sync.rs
