[workspace]
resolver = "2"
members = [
    "ccswitch-core",
    "ccswitch-cli",
]

[workspace.package]
version = "1.0.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/DoBestone/cc-switch-cli"
rust-version = "1.70.0"

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "s"
panic = "unwind"
strip = "symbols"
