[package]
name = "ccswitch-core"
version = "0.1.0"
edition = "2021"
authors = ["CC-Switch Contributors"]
description = "Core library for CC-Switch - CLI tool for managing Claude Code, Codex, and Gemini CLI configurations"
license = "MIT"
repository = "https://github.com/farion1231/cc-switch"
rust-version = "1.70.0"

[lib]
name = "ccswitch_core"
path = "src/lib.rs"

[features]
default = []
test-hooks = []

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
toml_edit = "0.22"

# Async runtime
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync"] }
futures = "0.3"
async-stream = "0.3"

# HTTP client (without Tauri deps)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream", "socks"] }

# Database
rusqlite = { version = "0.31", features = ["bundled", "backup"] }

# Utilities
dirs = "5.0"
regex = "1.10"
thiserror = "2.0"
anyhow = "1.0"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.21"
indexmap = { version = "2", features = ["serde"] }
uuid = { version = "1.11", features = ["v4"] }
base64 = "0.22"
url = "2.5"
tempfile = "3"
zip = "2.2"

[dev-dependencies]
serial_test = "3"
tempfile = "3"
